@@ -89,7 +89,6 @@ def opens = [
         ["--add-opens", "java.desktop/sun.awt=ALL-UNNAMED"],
         ["--add-opens", "java.desktop/sun.font=ALL-UNNAMED"],
         ["--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"],
-        ["--add-opens", "java.base/sun.security.action=ALL-UNNAMED"],
         ["--add-opens", "java.base/java.lang=ALL-UNNAMED"],
         ["--add-opens", "java.base/java.math=ALL-UNNAMED"],
         ["--add-opens", "java.base/java.util=ALL-UNNAMED"],
@@ -104,7 +103,6 @@ def opens = [
         ["--add-opens", "java.management/java.lang.management=ALL-UNNAMED"],
         ["--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"],
         ["--add-opens", "java.management/sun.management=ALL-UNNAMED"],
-        ["--add-opens", "java.base/sun.security.action=ALL-UNNAMED"],
         ["--add-opens", "java.management/java.lang.management=ALL-UNNAMED"],
         ["--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"],
         ["--add-opens", "java.management/sun.management=ALL-UNNAMED"],
@@ -136,7 +134,6 @@ def opens = [
         ["--add-opens", "java.management/java.lang.management=ALL-UNNAMED"],
         ["--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"],
         ["--add-opens", "java.management/sun.management=ALL-UNNAMED"],
-        ["--add-opens", "java.base/sun.security.action=ALL-UNNAMED"],
         ["--add-opens", "java.base/sun.net.util=ALL-UNNAMED"],
         ["--add-opens", "java.base/java.time=ALL-UNNAMED"],
         ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"],
